--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,16 +16,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         
-      - name: Set up JDK 17
+      - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
-          java-version: '17'
+          java-version: '11'
           
       - name: Download and Install Katalon Runtime Engine
         run: |
           wget -O katalonre.tar.gz "https://download.katalon.com/9.3.0/Katalon_Studio_Engine_Linux_64-9.3.0.tar.gz"
           tar -xzf katalonre.tar.gz
+          mv Katalon_Studio_Engine_Linux_64-9.3.0 katalonre
           
       - name: Execute API Tests with Katalon Runtime Engine
         run: |
