--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,19 @@
-name: API Automation with Katalon Runtime Engine
-
+name: CI
 on:
   push:
-    branches:
-      - main
+    branches: [ main]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
-  api_automation:
+  build:
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-        
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'adopt'
-          java-version: '11'
-          
-      - name: Download and Install Katalon Runtime Engine
-        run: |
-          wget -O katalonre.tar.gz "https://download.katalon.com/9.3.0/Katalon_Studio_Engine_Linux_64-9.3.0.tar.gz"
-          tar -xzf katalonre.tar.gz
-          mv Katalon_Studio_Engine_Linux_64-9.3.0 katalonre
-          
-      - name: Execute API Tests with Katalon Runtime Engine
-        run: |
-          cd katalonre
-          ./katalonc -noSplash -runMode=console -projectPath="/home/chetan/Katalon Studio/API_Actions/API_Actions.prj" -retry=0 -testSuitePath="Test Suites/Run_Suite" -browserType="Web Service" -executionProfile="default" -apiKey="fb7016b2-47ee-4d22-9e60-85b5b47f7d6b" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true -webui.autoUpdateDrivers=true
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Katalon Studio Github Action
+      uses: katalon-studio/katalon-studio-github-action@v2
+      with:
+          version: '9.3.0'
+          projectPath: '${{ github.workspace }}'
+          args: '-noSplash  -retry=0 -testSuitePath="Test Suites/Run_Suite" -browserType="Web Service" -executionProfile="default" -apiKey="fb7016b2-47ee-4d22-9e60-85b5b47f7d6b" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true -webui.autoUpdateDrivers=true'
